<resources>
    <string name="app_name">Android_HAS</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_artists_label">Artists</string>
    <string name="nav_albums_label">Albums</string>
    <string name="nav_songs_label">Songs</string>
    <string name="nav_playlists_label">Playlists</string>
    <string name="nav_rooms_label">Rooms</string>
    <string name="nav_room_groups_label">Room Groups</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="addsong_button">Add Song</string>
    <string name="sortByAlbum_button">Sort By Album</string>
    <string name="sortByArtist_button">Sort By Artist</string>
    <string name="albumspinner_label">Album?</string>
    <string name="songname_hint">Song Name?</string>
    <string name="songduration_hint">Duration (seconds)?</string>
    <string name="songposition_hint">Position in Album?</string>
    <string name="ftartistspinner_label">Ft Artist?</string>
    <string name="addftArtist_button">Add Ft Artist</string>
    <string name="addArtist_button">Add Artist</string>
    <string name="artist_hint">Artist Name?</string>
    <string name="addartist_button">Add Artist</string>
    <string name="addAlbum_button">Add Album</string>
    <string name="albumname_hint">Album Name?</string>
    <string name="artistspinner_label">Artist?</string>
    <string name="genre_hint">Genre?</string>
    <string name="albumreleasedate_label">Release Date?</string>
    <string name="addalbum_button">Add Album</string>
    <string name="addPlaylist_button">Add Playlist</string>
    <string name="playlistname_hint">Playlist Name?</string>
    <string name="playlist_song_spinner_label">Add Song</string>
    <string name="addSongToPlaylist_button">Add Song to Playlist</string>
    <string name="title_activity_add_room">AddRoomActivity</string>
    <string name="room_hint">Room Name?</string>
    <string name="addroom_button">Add Room</string>
    <string name="addRoom_button">Add Room</string>
    <string name="addRoomGroup_button">Add Room Group</string>
    <string name="room_group_name_hint">Room Group Name?</string>
    <string name="room_spinner_label">Add Room</string>
    <string name="addRoomToRoomGroup_button">Add Room to Group</string>
    <string name="in_room_label">In Room:</string>
    <string name="in_room_group_label">In group:</string>
    <string name="mute_label">Mute?</string>
    <string name="volume_label">Volume:</string>
    <string name="save">Save</string>
    <string name="creators">Created by: Kareem Halabi, Aurelie Pluche, Kristina Pearkes, Aidan Piwowar and Alex Orzechowski</string>

</resources>
