<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ca.mcgill.ecse321.android_has.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Error UI Elements-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/error_message"
            android:id="@+id/errorMessage"
            android:textColor="#FF0000"/>

        <!-- Artist UI Elements -->
        <EditText
            android:id="@+id/newartist_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/artist_hint" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:onClick="addArtist"
            android:text="@string/addartist_button"/>

        <View
            android:layout_height="2dp"
            android:layout_width="fill_parent"
            android:background="#FFFFFF"/>

        <!-- Album UI Elements -->

        <EditText
            android:id="@+id/newalbum_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/albumname_hint" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/artistspinner_label"/>

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:id="@+id/artistspinner"/>

        </LinearLayout>

        <EditText
            android:id="@+id/newalbum_genre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/genre_hint" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/albumreleasedate_label"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/albumreleasedate"
                android:layout_gravity="end"
                android:id="@+id/albumReleasedate"
                android:onClick="showDatePickerDialog"/>
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:onClick="addAlbum"
            android:text="@string/addalbum_button"/>

        <View
            android:layout_height="2dp"
            android:layout_width="fill_parent"
            android:background="#FFFFFF"/>

        <!-- Song UI Elements -->

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/albumspinner_label"/>

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:id="@+id/albumspinner"/>

        </LinearLayout>

        <EditText
            android:id="@+id/newsong_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/songname_hint" />

        <EditText
            android:id="@+id/newsong_duration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/songduration_hint" />

        <EditText
            android:id="@+id/newsong_position"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/songposition_hint" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:onClick="addSong"
            android:text="@string/addsong_button"/>


    </LinearLayout>

</RelativeLayout>
