<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ca.mcgill.ecse321.android_has.LocationSettingsActivity"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/volume_label"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/volume_TextView"/>

        <SeekBar
            android:layout_toLeftOf="@+id/volume_TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/volume_seekBar"
            android:max="100" />
    </RelativeLayout>

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal">

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/mute_label"/>

       <CheckBox
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:id="@+id/mute_CheckBox"/>

       <!-- Used to separate button from checkbox -->
       <View
           android:layout_width="0dp"
           android:layout_height="0dp"
           android:layout_weight="1"
           />

       <Button
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:onClick="saveChanges"
           android:text="@string/save"/>
   </LinearLayout>


</LinearLayout>
