<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ca.mcgill.ecse321.android_has.playlists.AddPlaylistActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/add_playlist_errorMessage"
            android:textColor="#FF0000"/>

        <EditText
            android:id="@+id/newplaylist_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/playlistName_hint" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/playlist_song_spinner_label"/>

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:id="@+id/playlist_song_spinner"/>


        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:onClick="addSongToPlaylist"
            android:text="@string/addSongToPlaylist_button"/>

        <View
            android:layout_height="2dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_width="fill_parent"
            android:background="#FFFFFF"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:onClick="addPlaylist"
            android:text="@string/addPlaylist_button"/>

    </LinearLayout>

</RelativeLayout>
